# AI-talking-to-kids

./: Pasted--DEBUG-openai-base-client-HTTP-Response-POST-https-api-openai-com-v1-chat-completions-200-OK-H-1726984351051.txt  Pasted--div-class-mb-8-label-for-ageSelect-class-block-text-lg-font-medium-mb-2-S-1726985968037.txt  Pasted--link-href-url-for-static-filename-css-styles-css-rel-stylesheet-head-body--1726985942242.txt  Pasted-DEBUG-httpcore-http11-response-closed-complete-DEBUG-openai-base-client-HTTP-Response-POST-https--1726984336090.txt  README.md  main.py  pyproject.toml  users.db
static/css/: styles.css
static/js/: app (copy) 1.js  app (copy).js  app.js
templates/: index.html  signin.html  signup.html
