[tool.poetry]
name = "repl-nix-soundsliderclick"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
elevenlabs = "0.2.24"
speechrecognition = "^3.10.4"
openai = "^1.47.0"
flask-cors = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
